devops-08-kubernetes/kubernetes-2.3-application-config/src/nginx_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: config-test
spec:
  selector:
    app: myapp
  type: NodePort
  ports:
    - name: web
      port: 80
      nodePort: 32000
      targetPort: 80
