devops-08-kubernetes/kubernetes-2.3-application-config/src/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitool-svc
  namespace: config-test
spec:
  selector:
    app: nmt
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80    
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 1180
